--- a/UMKM_Project/UMKM_Project.vbproj
+++ b/UMKM_Project/UMKM_Project.vbproj
@@ -73,6 +73,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutForm.Designer.vb">
+      <DependentUpon>AboutForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AboutForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Bookkeep.Designer.vb">
       <DependentUpon>Bookkeep.vb</DependentUpon>
     </Compile>
@@ -113,10 +119,22 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PromoteForm.Designer.vb">
+      <DependentUpon>PromoteForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="PromoteForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Bookkeep.resx">
       <DependentUpon>Bookkeep.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DebtForm.resx">
+      <DependentUpon>DebtForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeForm.resx">
       <DependentUpon>HomeForm.vb</DependentUpon>
@@ -129,6 +147,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PromoteForm.resx">
+      <DependentUpon>PromoteForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
